OpenCL Cycles Render Fail #60320

Closed
opened 2019-01-08 15:37:55 +01:00 by Karthik Hebbar · 23 comments

System Information
Operating system: Win 10
Graphics card: AMD R7 265

Blender Version
Broken:2.80 Beta
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Compiling OpenCL program split
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program split build output: "source\kernel/kernel_volume.h", line 394: error: expression must have

        pointer-to-struct-or-union type
      if(rand < pdf->x) {
                ^

"source\kernel/kernel_volume.h", line 397: error: expression must have

        pointer-to-struct-or-union type
      else if(rand < pdf->x + pdf->y) {
                     ^

"source\kernel/kernel_volume.h", line 397: error: expression must have

        pointer-to-struct-or-union type
      else if(rand < pdf->x + pdf->y) {
                              ^

3 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL9568T4.cl".
Frontend phase failed compilation.

Split kernel error: failed to load kernel_path_init
Error: Split kernel error: failed to load kernel_path_init
Compiling OpenCL program split
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program split build output: "source\kernel/kernel_volume.h", line 394: error: expression must have

        pointer-to-struct-or-union type
      if(rand < pdf->x) {
                ^

"source\kernel/kernel_volume.h", line 397: error: expression must have

        pointer-to-struct-or-union type
      else if(rand < pdf->x + pdf->y) {
                     ^

"source\kernel/kernel_volume.h", line 397: error: expression must have

        pointer-to-struct-or-union type
      else if(rand < pdf->x + pdf->y) {
                              ^

3 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL9568T4.cl".
Frontend phase failed compilation.

Split kernel error: failed to load kernel_path_init
Error: Split kernel error: failed to load kernel_path_init

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: Win 10 Graphics card: AMD R7 265 **Blender Version** Broken:2.80 Beta (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Compiling OpenCL program split OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program split build output: "source\kernel/kernel_volume.h", line 394: error: expression must have ``` pointer-to-struct-or-union type if(rand < pdf->x) { ^ ``` "source\kernel/kernel_volume.h", line 397: error: expression must have ``` pointer-to-struct-or-union type else if(rand < pdf->x + pdf->y) { ^ ``` "source\kernel/kernel_volume.h", line 397: error: expression must have ``` pointer-to-struct-or-union type else if(rand < pdf->x + pdf->y) { ^ ``` 3 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL9568T4.cl". Frontend phase failed compilation. Split kernel error: failed to load kernel_path_init Error: Split kernel error: failed to load kernel_path_init Compiling OpenCL program split OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program split build output: "source\kernel/kernel_volume.h", line 394: error: expression must have ``` pointer-to-struct-or-union type if(rand < pdf->x) { ^ ``` "source\kernel/kernel_volume.h", line 397: error: expression must have ``` pointer-to-struct-or-union type else if(rand < pdf->x + pdf->y) { ^ ``` "source\kernel/kernel_volume.h", line 397: error: expression must have ``` pointer-to-struct-or-union type else if(rand < pdf->x + pdf->y) { ^ ``` 3 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL9568T4.cl". Frontend phase failed compilation. Split kernel error: failed to load kernel_path_init Error: Split kernel error: failed to load kernel_path_init **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @deltamish

Added subscriber: @deltamish

#60352 was marked as duplicate of this issue

#60352 was marked as duplicate of this issue

This issue was referenced by blender/cycles@359666e41e

This issue was referenced by blender/cycles@359666e41efebaf6da9f99878895911e11484f4c

This issue was referenced by b486088218

This issue was referenced by b486088218f66810b97294f38f246e4650d32f2b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Hey, I see you have marked this issue as resolved. If you can let me.know how I cam do it in my system as I am using latest beta version of blender it will be helpful

Thanks,
Karthik

Hey, I see you have marked this issue as resolved. If you can let me.know how I cam do it in my system as I am using latest beta version of blender it will be helpful Thanks, Karthik

Added subscriber: @brecht

Added subscriber: @brecht

Get the latest build from here:
https://builder.blender.org/download/

If there's still a problem please post the error message, since the code here was changed.

Get the latest build from here: https://builder.blender.org/download/ If there's still a problem please post the error message, since the code here was changed.
Author

This comment was removed by @deltamish

*This comment was removed by @deltamish*
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Hey , i just tried out with the latest version Jan 11 release
And its still failing

Device init success
Compiling OpenCL program denoising
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program denoising build output: "source\kernel/filter/filter_nlm_gpu.h", line 39: error: expression must have

pointer-to-struct-or-union type

co->z = sx-r;
^

"source\kernel/filter/filter_nlm_gpu.h", line 40: error: expression must have

pointer-to-struct-or-union type

co->w = sy-r;
^

"source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have

pointer-to-struct-or-union type

*rect = make_int4(max(0, -co->z), max(0, -co->w),

      ^

"source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have

pointer-to-struct-or-union type

*rect = make_int4(max(0, -co->z), max(0, -co->w),

      ^

"source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have

pointer-to-struct-or-union type

*rect = make_int4(max(0, -co->z), max(0, -co->w),

      ^

"source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have

pointer-to-struct-or-union type

*rect = make_int4(max(0, -co->z), max(0, -co->w),

      ^

"source\kernel/filter/filter_nlm_gpu.h", line 62: error: expression must have

pointer-to-struct-or-union type

co->x = x;
^

"source\kernel/filter/filter_nlm_gpu.h", line 63: error: expression must have

pointer-to-struct-or-union type

co->y = y;
^

8 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL10028T1.cl".
Frontend phase failed compilation.

Error: Failed loading render kernel, see console for errors

Can you kindly check

Thanks for the amazing tool though. Beats most of the modeling suite out there

Hey , i just tried out with the latest version Jan 11 release And its still failing Device init success Compiling OpenCL program denoising OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program denoising build output: "source\kernel/filter/filter_nlm_gpu.h", line 39: error: expression must have ``` pointer-to-struct-or-union type ``` co->z = sx-r; ^ "source\kernel/filter/filter_nlm_gpu.h", line 40: error: expression must have ``` pointer-to-struct-or-union type ``` co->w = sy-r; ^ "source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 44: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 62: error: expression must have ``` pointer-to-struct-or-union type ``` co->x = x; ^ "source\kernel/filter/filter_nlm_gpu.h", line 63: error: expression must have ``` pointer-to-struct-or-union type ``` co->y = y; ^ 8 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL10028T1.cl". Frontend phase failed compilation. Error: Failed loading render kernel, see console for errors Can you kindly check Thanks for the amazing tool though. Beats most of the modeling suite out there

This issue was referenced by blender/cycles@e96a2e28d6

This issue was referenced by blender/cycles@e96a2e28d67aa5636a20574db19776b2ebc07399

This issue was referenced by e5a1a9288c

This issue was referenced by e5a1a9288c66ce218a03abf7666336a39ba03b8f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

How do I solve the issue ?

How do I solve the issue ?

There will be a fix in tomorrow's build from https://builder.blender.org/download/.

There will be a fix in tomorrow's build from https://builder.blender.org/download/.
Author

Is the fix included in jan 12 build ?

Update openCL still failing with following issue
Compiling OpenCL program denoising
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program denoising build output: "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

"source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

"source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

"source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

4 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL10156T1.cl".
Frontend phase failed compilation.

Error: Failed loading render kernel, see console for errors

Hope it helps

Is the fix included in jan 12 build ? **Update openCL still failing with following issue** Compiling OpenCL program denoising OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program denoising build output: "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` 4 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL10156T1.cl". Frontend phase failed compilation. Error: Failed loading render kernel, see console for errors Hope it helps
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Blender 2.80 Jan 13 Build

Compiling OpenCL program denoising
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program denoising build output: "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

"source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

"source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

"source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have

        pointer-to-struct-or-union type
    *rect = make_int4(max(0, -co->z),     max(0, -co->w),
              ^

4 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL6452T2.cl".
Frontend phase failed compilation.

Error: Failed loading render kernel, see console for errors

Hope it helps

Blender 2.80 Jan 13 Build Compiling OpenCL program denoising OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program denoising build output: "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` "source\kernel/filter/filter_nlm_gpu.h", line 42: error: expression must have ``` pointer-to-struct-or-union type ``` *rect = make_int4(max(0, -co->z), max(0, -co->w), ``` ^ ``` 4 errors detected in the compilation of "C:\Users\Karthik\AppData\Local\Temp\OCL6452T2.cl". Frontend phase failed compilation. Error: Failed loading render kernel, see console for errors Hope it helps

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-01-14 12:14:56 +01:00

This latest error should be solved by 10fa3b7.

By the way, I guess you have either a quite old or very new graphics driver, because I don't get those OpenCL errors. So I'm flying blind a bit fixing these things.

This latest error should be solved by 10fa3b7. By the way, I guess you have either a quite old or very new graphics driver, because I don't get those OpenCL errors. So I'm flying blind a bit fixing these things.
Author

Hmm That's very strange. I'm running on AMD R7 265. I tested both on 18.9.3(Nov 2018) and 19.1.1(Jan 2019) driver. both are facing same issue

Hmm That's very strange. I'm running on AMD R7 265. I tested both on 18.9.3(Nov 2018) and 19.1.1(Jan 2019) driver. both are facing same issue
Author

Hey Downloaded the latest version of blender 17 Jan version. the Open CL issue is gone. But when I put on GPU compute bake with tile size 128X 128. My entire PC froze up and I had to turn it off manually

Hey Downloaded the latest version of blender 17 Jan version. the Open CL issue is gone. But when I put on GPU compute bake with tile size 128X 128. My entire PC froze up and I had to turn it off manually
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60320
No description provided.