Fix T60320: Cycles OpenCL volume rendering error on some drivers.